--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ header.fixed {
   color: white;
 }
 .search-form .col-auto button {
-  font-size: 14px;
+  font-size: 0.8rem;
   height: 38px;
   border: 0;
 }
@@ -275,6 +275,39 @@ header.fixed {
   z-index: 8;
 }
 
-.select-btn:hover {
-  background: red;
+.select {
+  height: 38px;
+  border: 0;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem 0 0 0.3rem;
+  font-size: 16px;
+  background-color: white;
+  padding: 10px 40px 10px 20px;
+}
+
+.select-menu {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+}
+.select-item {
+  width: 150px;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.3) !important;
+}
+
+.select:active {
+  background-color: red;
+}
+
+.select::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  margin-left: 8px;
+  margin-top: 8px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid rgb(100, 100, 100);
 }
